--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br> 
             also technically my first website (a la 1996)
         <br> 
-            im currently learing web development </a> and working on my next music project </p> 
+            im currently learing web development and working on my next music project </p> 
     </td>
 </table> </center>
 <!--- form -->
