--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br> 
             also technically my first website (a la 1996)
         <br> 
-            im currently learing web development and working on my next music project </p> 
+            as I learn web development </a> and work on my next music project </p> 
     </td>
 </table> </center>
 <!--- form -->
@@ -29,12 +29,13 @@
     <hr size="3" noshade>
        <h3 style="font-family:monospace"> currently engaging with </h3> 
        <ul style="font-family:monospace">
-            <li>the british monarchy </li>
-            <li>leonor fini </li>
-            <li>kristen mcmenamy </li>
-            <li>what would marina abramovic do</li>
-            <li>earthsea book 1 by ursula k. le guin </li>
-            <li> <a href="https://my.clevelandclinic.org/health/diseases/17793-dermatographism-dermatographia"> dermatographia </a> </li>
+            <li> how catan can be applied to leveling up in real life </li>
+            <li> tomato based veggie recipies </li>
+            <li> planting hope for 2023 </li>
+            <li> the alt english girlies </li>
+            <li> beds for world building </li>
+            <li> earthsea book 1 by ursula k. le guin </li>
+            <li> <a href="https://www.nts.live/shows/guests/episodes/jam-city-20th-january-2017"> jam city </a></li>
             <li> <a href="https://www.youtube.com/watch?v=CJ-6vzIqsg4"> esthero </a></li>
             <li> guy sigsworth production </li>
         </ul>
@@ -59,6 +60,10 @@
     <center> <p>
         <img src="images/charmed season 1.jpeg">
             <p> charmed season 1 box set </p>
+    </center> </p>
+    <center> <p>
+        <img src="images/toilet of venus .jpg">
+            <p> toilet of venus / simon vouet (1640)  </p>
     </center> </p>
 </body>
 </html> 
